HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
@@ -7503,8 +7503,9 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Programming-Language">Programming Language<a class="anchor-link" href="#Programming-Language">¶</a></h1><p>A formal set of instructions and rules used to communicate with a computer. Must conform to a specific Syntax.
-<br/>Enables programmers to write programs that can be executed by a computer to perform specific tasks.</p>
+<h1 id="Programming-Language">Programming Language<a class="anchor-link" href="#Programming-Language">¶</a></h1><p>A formal set of instructions and rules used to communicate with a computer.</p>
+<p>Must conform to a specific Syntax.</p>
+<p>Enables programmers to write programs that can be executed by a computer to perform specific tasks.</p>
 <p>We will use the Python programming language but the principles we will study can be applied in any programming language</p>
 </div>
 </div>
@@ -7632,15 +7633,26 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="How-you'll-learn">How you'll learn<a class="anchor-link" href="#How-you'll-learn">¶</a></h1><h3 id="Pre-watch/-pre-read-material">Pre-watch/ pre-read material<a class="anchor-link" href="#Pre-watch/-pre-read-material">¶</a></h3><p>Each week (excluding consolidation weeks) you MUST view the pre-watch/pre-read material before coming to the lab class (Tuesday).</p>
-<p>This content is available as:</p>
+<h1 id="How-you'll-learn">How you'll learn<a class="anchor-link" href="#How-you'll-learn">¶</a></h1><p>The materials for each week are posted on Blackboard</p>
+<p>Blackboard Page for this unit: <strong>Computer Programming and Algorithms 2024</strong> &gt;&gt; Teaching and Learning Area &gt;&gt; week e.g. Week 1</p>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h3 id="Pre-watch/-pre-read-material">Pre-watch/ pre-read material<a class="anchor-link" href="#Pre-watch/-pre-read-material">¶</a></h3><p>Each week (excluding consolidation weeks) you MUST view the pre-watch/pre-read material before coming to the lab class (Tuesday).</p>
+<p>The pre-watch/pre-read material is available as:</p>
 <ol>
-<li>Videos</li>
+<li>Videos: 3-4, videos per week, 10-15 minute each</li>
 <li>Google Colaboratory (Colab) notebook</li>
 </ol>
-<p>There are 3-4, videos per week, 10-15 minute each</p>
-<p>The Google Colab notebooks can be used to view and pre-read the text and code instead of, or in addition to, the videos.</p>
-<p>The recorded material is designed to help you work through the fundamental concepts for the week at your own pace and go over things multiple times if needed.</p>
+<p>The pre-watch/pre-read material will help you work through the fundamental concepts for the week at your own pace and go over things multiple times if needed.</p>
+<h3 id="Lab-material">Lab material<a class="anchor-link" href="#Lab-material">¶</a></h3><p>The lab material is available as Google Colaboratory (Colab) notebook</p>
 </div>
 </div>
 </div>
@@ -7656,6 +7668,20 @@ main {
 <p>Under "Enter a Github URL or search by organisation or user", paste the link to this week's notebook (on blackboard)</p>
 <p>You will need to login with a gmail account to run the interactive code cells.</p>
 <p>You can create an account here: <a href="https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&amp;dsh=S-486515162:1725811412833849&amp;flowEntry=SignUp&amp;flowName=GlifWebSignIn&amp;TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW">https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&amp;dsh=S-486515162:1725811412833849&amp;flowEntry=SignUp&amp;flowName=GlifWebSignIn&amp;TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW</a></p>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h1 id="Saving-a-notebook">Saving a notebook<a class="anchor-link" href="#Saving-a-notebook">¶</a></h1><p>The notebooks contain interactive code cells that you can edit during the class.</p>
+<p>You may want to save your own copy of your edited notebook.</p>
+<p>To download the notebook, you can select: File &gt;&gt; Download &gt;&gt; Download .ipynb</p>
+<p>Next time you want to open the file in Colab, you can select: File &gt;&gt; Upload Notebook &gt;&gt; Browse <br/>...and then select your file.</p>
 </div>
 </div>
 </div>
@@ -7697,15 +7723,19 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Drop-in-support-session-(Tuesday/Wednesday-+-Friday---check-your-timetable)">Drop-in support session (Tuesday/Wednesday + Friday - check your timetable)<a class="anchor-link" href="#Drop-in-support-session-(Tuesday/Wednesday-+-Friday---check-your-timetable)">¶</a></h3><ul>
+<h3 id="Drop-in-support-session-(Tuesday/Wednesday-+-Friday)">Drop-in support session (Tuesday/Wednesday + Friday)<a class="anchor-link" href="#Drop-in-support-session-(Tuesday/Wednesday-+-Friday)">¶</a></h3><ul>
 <li>An extra session for additional 1-to-1 support</li>
 <li>TA-run session</li>
 <li>Wednesday sessions 10-11 am in QB 1.80, <strong>but</strong><ul>
 <li>No session this week</li>
-<li>Next week's session will be 5-6 pm in MVB 1.15</li>
+<li>Next week's session will be Tuesday 5-6 pm in MVB 1.15</li>
 </ul>
 </li>
-<li>Friday sessions 1-2 pm in QB 1.80</li>
+<li>Friday sessions 1-2 pm in QB 1.80 <strong>but</strong><ul>
+<li>No session this week</li>
+<li>Next week's session will be Friday 5-6 pm in MVB 1.15</li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -7720,15 +7750,13 @@ main {
 <h1 id="Study-Groups">Study Groups<a class="anchor-link" href="#Study-Groups">¶</a></h1><ul>
 <li><p>You have all been assigned to a study group containing 6 students.</p>
 </li>
-<li><p>Each group has been assigned a number, and you should sit on the table with the same number as your group.</p>
+<li><p>Each group has been assigned a number, and you should sit on the table with the same number as your group, for the entire duration of the course.</p>
 </li>
-<li><p>We expect you to sit on the same table for the entire duration of the course.</p>
-</li>
-<li><p>We also expect members of a study group to support each other throughout the course- programming shouldn't be a solitary activity and we encourage you to work on the lab exercises in pairs.</p>
+<li><p>We also expect members of a study group to support each other throughout the course - we encourage you to work on the lab exercises in pairs.</p>
 </li>
 <li><p>If you are stuck on an exercise, or don't understand something, please first ask the other members of your study group for support.</p>
 </li>
-<li><p>Similarly, if you finish with the lab exercises, we encourage you to help out other members of your study group- explaining something to somebody else is a great way to consolidate your learning.</p>
+<li><p>Similarly, if you finish with the lab exercises, we encourage you to help out other members of your study group.</p>
 </li>
 <li><p>Each study group will be assigned a teaching assistant, who will work with you throughout the course.</p>
 </li>
@@ -7745,7 +7773,8 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Keeping-on-top-of-this-course">Keeping on top of this course<a class="anchor-link" href="#Keeping-on-top-of-this-course">¶</a></h1><p>2 hours a week is not enough for you to get a good mark on this course. While in some weeks it may be possible for you to complete everything within the labs, in general, we expect you to have to do some work in your own time.</p>
+<h1 id="Keeping-on-top-of-this-course">Keeping on top of this course<a class="anchor-link" href="#Keeping-on-top-of-this-course">¶</a></h1><p>2 hours a week is not enough for you to get a good mark on this course.</p>
+<p>While in some weeks it may be possible for you to complete everything within the labs, in general, we expect you to have to do some work in your own time.</p>
 <p>To stay on track with CPA, you should aim to finish each lab sheet within the week it is assigned.</p>
 <p>If you have not done so, then we particularly encourage you to come to the drop-ins to get some extra help.</p>
 </div>
@@ -7806,49 +7835,6 @@ You will receive verbal feedback from your allocated TA
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Course-Material">Course Material<a class="anchor-link" href="#Course-Material">¶</a></h1><p>The links to <strong>videos and notebooks (containing slides and lab exercises)</strong> are on Blackboard</p>
-<p>Go to the Blackboard Page for this unit: <strong>Computer Programming and Algorithms 2024</strong></p>
-<p>Click on the Teaching and Learning Area</p>
-<p>Click on the week number to view the material for that week e.g. Week 1</p>
-</div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Opening-Google-Colab">Opening Google Colab<a class="anchor-link" href="#Opening-Google-Colab">¶</a></h1><p>Go to Google Colab in a web browser <a href="https://colab.research.google.com/">https://colab.research.google.com/</a></p>
-<p>Select File &gt;&gt; Open Notebook &gt;&gt; Github</p>
-<p>Under "Enter a Github URL or search by organisation or user", paste the link to this week's notebook (on blackboard)</p>
-<p>You will need to login with a gmail account to run the interactive code cells.</p>
-<p>You can create an account here: <a href="https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&amp;dsh=S-486515162:1725811412833849&amp;flowEntry=SignUp&amp;flowName=GlifWebSignIn&amp;TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW">https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&amp;dsh=S-486515162:1725811412833849&amp;flowEntry=SignUp&amp;flowName=GlifWebSignIn&amp;TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW</a></p>
-</div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Saving-a-notebook">Saving a notebook<a class="anchor-link" href="#Saving-a-notebook">¶</a></h1><p>The notebooks contain interactive code cells that you can edit during the class.</p>
-<p>You may want to save your own copy of your edited notebook.</p>
-<p>To download the notebook, you can select: File &gt;&gt; Download &gt;&gt; Download .ipynb</p>
-<p>Next time you want to open the file in Colab, you can select: File &gt;&gt; Upload Notebook &gt;&gt; Browse <br/>...and then select your file.</p>
-</div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Need-more-practise-or-want-some-more-advanced-information?">Need more practise or want some more advanced information?<a class="anchor-link" href="#Need-more-practise-or-want-some-more-advanced-information?">¶</a></h1><p>We understand that you are coming to this course from different backgrounds and with different levels of programming experience.</p>
 <p>At the end of each video there are mulitple links to:</p>
 <ul>
@@ -7897,31 +7883,6 @@ You will receive verbal feedback from your allocated TA
 <p>There are some short set-up tasks that you need to complete on the linux computers in the lab.</p>
 <p>You should all complete these in class today.</p>
 <p>Many of you will want to install this software on your own machines- we've put some instructions on Blackboard to show you how to do this.</p>
-</div>
-</div>
-</div>
-</div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="Setting-up-the-lab-computer">Setting up the lab computer<a class="anchor-link" href="#Setting-up-the-lab-computer">¶</a></h1><h3 id="Terminal">Terminal<a class="anchor-link" href="#Terminal">¶</a></h3><ul>
-<li>Open the Terminal application</li>
-<li>Type the following line of code then press enter: <code>module load anaconda</code></li>
-<li>Type the following line of code then press enter: <code>/opt/anaconda/3-2024/bin/conda init</code></li>
-<li>Close the Terminal application</li>
-<li>Open the Terminal application again</li>
-<li>Check that the new terminal displays the word <code>base</code> at the left of the screen where you enter the code.</li>
-</ul>
-<h3 id="Visual-Studio-(VS)-Code">Visual Studio (VS) Code<a class="anchor-link" href="#Visual-Studio-(VS)-Code">¶</a></h3><ul>
-<li>Open the Visual Studio Code application</li>
-<li>If prompted to install a Python extension choose yes</li>
-<li>Press Ctrl + Shift + P to open the Command Palette</li>
-<li>Type 'Python: Select Interpreter' in the search bar or scroll down to find this option and click on it when found.</li>
-<li>Select Python 3.12.3 (base)</li>
-</ul>
 </div>
 </div>
 </div>
