HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
@@ -7616,6 +7616,8 @@ c) <code>'Programming'</code></p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p><strong>Object Creation:</strong> <br/>The original object (<code>1.0</code>) remains in memory. <br/>A new object with value <code>1</code> is created in memory.</p>
 <p><strong>Reference Assignment:</strong> <br/>The variable name <code>b</code> points to the new object.</p>
+<img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/assignment_casting_b.png?raw=true" width="20%"/>
+
 </div>
 </div>
 </div>
@@ -7845,7 +7847,7 @@ c) <code>'Programming'</code></p>
 </div>
 </div>
 </div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=fb8d54f2">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=c649a5cc">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7863,7 +7865,7 @@ c) <code>'Programming'</code></p>
 </div>
 </div>
 </div></section></section><section><section>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=842830ae">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=eef4ac07">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
