HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
@@ -7798,7 +7798,7 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Communication">Communication<a class="anchor-link" href="#Communication">¶</a></h1><p>Communication about this course will predominantly be via Blackboard- please look out for announcements.</p>
-<p>Any questions you have about the course should be posted in the Blackboard forum so everybody can benefit from the same information.</p>
+<p>Any questions you have about the course should be posted in the Blackboard Discussions board so everybody can benefit from the same information.</p>
 <p>Email should only be used for discussing personal issues (i.e extenuating circumstances or need for individual adjustments).</p>
 </div>
 </div>
