HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.slides.html
@@ -7558,7 +7558,7 @@ main {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 id="Learning-Objectives">Learning Objectives<a class="anchor-link" href="#Learning-Objectives">¶</a></h1><p>We will study:</p>
 <ul>
-<li>The fundamentals of programming (e.g., data types, controlling the flow of a computer program, modularising code with functions)</li>
+<li>The fundamentals of programming (e.g. data types, controlling the flow of a computer program, modularising code with functions)</li>
 <li>How to read, write, process and visualize data</li>
 <li>How to write code that is not only correct, but also understood by others</li>
 <li>How to think about and implement basic algorithms (e.g. for searching or sorting)</li>
@@ -7727,11 +7727,11 @@ main {
 <li>An extra session for additional 1-to-1 support</li>
 <li>TA-run session</li>
 <li>Wednesday sessions 10-11 am in QB 1.80, <strong>but</strong><ul>
-<li>Next week's session will be Tuesday 5-6 pm in MVB 1.15</li>
+<li>Week 2 and 3 sessions will be Tuesday 5-6 pm in MVB 1.15</li>
 </ul>
 </li>
 <li>Friday sessions 1-2 pm in QB 1.80 <strong>but</strong><ul>
-<li>Next week's session will be Friday 5-6 pm in MVB 1.15</li>
+<li>Week 2 and 3 sessions will be Friday 5-6 pm in MVB 1.15</li>
 </ul>
 </li>
 </ul>
@@ -7878,8 +7878,6 @@ You will receive verbal feedback from your allocated TA
 <li>Python3.12</li>
 <li>Python Libraries: numpy and matplotlib</li>
 </ul>
-<p>There are some short set-up tasks that you need to complete on the linux computers in the lab.</p>
-<p>You should all complete these in class today.</p>
 <p>Many of you will want to install this software on your own machines- we've put some instructions on Blackboard to show you how to do this.</p>
 </div>
 </div>
