--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
@@ -7554,7 +7554,7 @@ main {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Integers and floating point numbers are stored on a computer as <strong>binary</strong> or <strong>base-2</strong> numbers.</p>
 <p>Each number is formed by finding the sum of base-2 numbers, each multiplied by a factor <strong>1 or 0</strong>.</p>
-<img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/whole_number_.png?raw=true" width="30%"/>
+<img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/whole_number__.png?raw=true" width="30%"/>
 <img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/decimal_number.png?raw=true" width="30%"/>
 </div>
 </div>
@@ -7566,7 +7566,9 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>The limited number of bits used to store floating point numbers can lead to inexact storage of fractional numbers, known as floating point error.</p>
+<p><strong>Floating Point Error</strong></p>
+<p>A limited number of bits used to store floating point numbers (<code>float</code>)</p>
+<p>Can lead to inexact storage of decimal numbers, known as <em>floating point error</em>.</p>
 </div>
 </div>
 </div>
