HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
@@ -7552,7 +7552,7 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Integers and floating point numbers are stored on a computer as <strong>binary</strong> or <strong>base-2</strong> numbers.</p>
+<p>Integers (<code>int</code>) and floating point numbers (<code>float</code>) are stored on a computer as <strong>binary</strong> or <strong>base-2</strong> numbers.</p>
 <p>Each number is formed by finding the sum of base-2 numbers, each multiplied by a factor <strong>1 or 0</strong>.</p>
 <img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/whole_number__.png?raw=true" width="30%"/>
 <img alt="No description has been provided for this image" src="https://github.com/engmaths/SEMT10002_2024/blob/main/img/decimal_number.png?raw=true" width="30%"/>
@@ -7579,8 +7579,8 @@ main {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Strings (text characters) are stored on a computer as a series of bytes (8 bit binary number).</p>
-<p>Boolean <code>True</code> and <code>False</code> values are stored in computer memory as integers <code>1</code> and <code>0</code></p>
+<p>Strings (<code>str</code>) (text characters) are stored on a computer as a series of bytes (8 bit binary number).</p>
+<p>Boolean (<code>bool</code>) <code>True</code> and <code>False</code> values are stored in computer memory as integers <code>1</code> and <code>0</code></p>
 </div>
 </div>
 </div>
