HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.slides.html
@@ -7567,8 +7567,8 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p><strong>Floating Point Error</strong></p>
-<p>A limited number of bits used to store floating point numbers (<code>float</code>)</p>
-<p>Can lead to inexact storage of decimal numbers, known as <em>floating point error</em>.</p>
+<p>A limited number of bits is used to store floating point numbers (<code>float</code>)</p>
+<p>This can lead to inexact storage of decimal numbers, known as <em>floating point error</em></p>
 </div>
 </div>
 </div>
